Sending SMTP mails

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,11 @@ app.name = Development Env
 spring.profiles.active: book,prod
 
 spring.mail.host = smtp.gmail.com
+spring.mail.username = your_gmail_id@gmail.com
+spring.mail.password = an_application_password
+
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
+spring.mail.properties.mail.smtp.ssl.enable = true
