--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
 	        <optional>true</optional>
 	    </dependency>
 	
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
 	</dependencies>
 	
 	<build>
