--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,17 @@
 		    <artifactId>jstl</artifactId>
 		</dependency>		
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+	
 	</dependencies>
 	
 	<build>
