--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,10 @@ spring.mail.properties.mail.smtp.ssl.enable = true
 
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
+
+spring.datasource.url: jdbc:mysql://localhost:3306/np-spring-tutorial
+spring.datasource.username: spring
+spring.datasource.password: spring
+
+spring.jpa.hibernate.ddl-auto: create
+spring.jpa.properties.javax.persistence.validation.mode: none
