Coded custom error page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.datasource.password: spring
 
 spring.jpa.hibernate.ddl-auto: create
 spring.jpa.properties.javax.persistence.validation.mode: none
+
+server.error.whitelabel.enabled: false
