--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.jpa.hibernate.ddl-auto: create
 spring.jpa.properties.javax.persistence.validation.mode: none
 
 server.error.whitelabel.enabled: false
+
+security.user.name: user@example.com
+security.user.password: password
