--- a/pom.xml
+++ b/pom.xml
@@ -69,10 +69,15 @@
 		</dependency>
 	
 		<dependency>
-		    	<groupId>org.springframework.boot</groupId>
-		    	<artifactId>spring-boot-starter-security</artifactId>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+		</dependency>
+		
 	</dependencies>
 	
 	<build>
