--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
 			<artifactId>spring-security-taglibs</artifactId>
 		</dependency>
 		
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>RELEASE</version>
+		</dependency>
+
 	</dependencies>
 	
 	<build>
