Updated for Spring Boot 1.4

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ app.name = Development Env
 
 spring.profiles.active: book,prod
 
-spring.mail.host = smtp.gmail.com
+# spring.mail.host = smtp.gmail.com
 spring.mail.username = your_gmail_id@gmail.com
 spring.mail.password = an_application_password
 
